force-app/main/default/objects/objects/Lead/fields/Cars_Available__c.field-meta.xml
<CustomField>
    <fullName>Cars_Available__c</fullName>
    <label>Cars Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renault Kiger</fullName>
            </value>
            <value>
                <fullName>Renault Kiger RXL MT</fullName>
            </value>
            <value>
                <fullName>Renault Kiger RXT MT</fullName>
            </value>
            <value>
                <fullName>Renault Kiger RXT Turbo CVT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>