force-app/main/default/objects/objects/Lead/fields/Cmail__c.field-meta.xml
<CustomField>
    <fullName>Cmail__c</fullName>
    <label>Cmail</label>
    <type>Email</type>
</CustomField>