force-app/main/default/objects/objects/Lead/fields/Lead_Address__c.field-meta.xml
<CustomField>
    <fullName>Lead_Address__c</fullName>
    <description>Store the address of Lead</description>
    <label>Lead Address</label>
    <length>18</length>
    <type>Text</type>
</CustomField>