force-app/main/default/objects/objects/Lead/fields/Lead_Max_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Max_Conversion_Date__c</fullName>
    <formula>CreatedDate + 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Max Conversion Date</label>
    <type>Date</type>
</CustomField>