force-app/main/default/objects/objects/Lead/listViews/North_America_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>North_America_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>North America Leads</label>
    <queue>North_America_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>